# CValg

DFT/: CMakeLists.txt
DFT/src/: Dip4.cpp
ExpectationMaximization/: Plots.ipynb
ExpectationMaximization/Code/: Aia4.cpp  Aia4.h  main.cpp
ExpectationMaximization/Notes/: aia4.ipynb  results.txt
FilterTechniques/: CMakeLists.txt
FilterTechniques/src/: Dip2.cpp
FourierDescriptors/: CMakeLists.txt
FourierDescriptors/Code/: Aia2.cpp  Aia2.h  main.cpp
Gaussian/: CMakeLists.txt
Gaussian/src/: Dip3.cpp  main.cpp
Hough/: Aia3.cpp  Aia3.h  Aia3_karel.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  aia3  cmake_install.cmake  git2  git2.pub
NonMaxSupression/: CMakeLists.txt
NonMaxSupression/include/: Dip5.h
NonMaxSupression/src/: Dip5.cpp
